2019-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c: fix bug #2834
	* support/regression/tests/bug-2834.c: re-enable test

2019-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk14/__setjmp.s,
	  device/lib/pdk15/__setjmp.s,
	  device/lib/pdk14/Makefile.in,
	  device/lib/pdk15/Makefile.in,
	  support/regression/tests/setjmp.c,
	  support/regression/tests/gcc-torture-execute-20010409-1.c,
	  support/regression/tests/gcc-torture-execute-pr60003.c:
	  setjmp() / longjmp() for pdk.

2019-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20051110-2.c:
	  Enable a test (bug got fixed a few days ago via patch by Nicolas).
	* device/lib/Makefile.in,
	  device/lib/*/Makefile.in,
	  support/regression/tests/wchar.c,
	  support/regression/tests/bug-2855.c:
	  Fix bug #2855.

2019-03-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c: fix bug #2793
	* support/regression/tests/bug-2793: re-enable test
	* support/regression/tests/gcc-torture-execute-20120817-1.c:
	  re-enable test

2019-03-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c: fix bug #2713
	* support/regression/tests/bug2783061.c: bug #2713 tested

2019-03-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/sdcc.nsi:
	  Include pdk libraries in Windows installer.

2019-03-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/_ulong2fs.c: fix bug #2787
	* support/regression/tests/gcc-torture-execute-floatunsisf-1.c:
	  re-enable test
	* src/ds390/gen.c: fix bug #2835
	* support/regression/tests/bug-2833.c: re-enable tests

2019-03-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/sdcc.nsi:
	  Include pdk binaries in Windows installer.

2019-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/_modslonglong.c: fix bug #2790
	* support/regression/tests/gcc-torture-execute-arith-rand-ll.c:
	  re-enable tests
